<resources>
    <string name="app_name" translatable="false">Galochka</string>
    <string name="auth_google">Login with \nGoogle Account</string>
    <string name="auth_email">Login with email</string>
    <string name="registration">Registration</string>
    <string name="registration_now">Register now</string>
    <string name="has_account">Already have a Galochka account?</string>
    <string name="need_registration">Need a Galochka account?</string>
    <string name="has_account_entry">Login</string>
    <string name="auth_email_enter_email">Please enter your email*</string>
    <string name="auth_email_enter_password">Enter password*</string>
    <string name="auth_email_enter_you_password">Enter password*</string>
    <string name="auth_email_enter_password_double">Confirm the password*</string>
    <string name="forgot_password">I do not remember the password</string>
    <string name="recreate_password">Restore password</string>
    <string name="recreate_password_text">We have sent a password reset email to your email.</string>
    <string name="auth_email_password_lenght">Password length must be at least 8 characters</string>
    <string name="auth_success">Authentication was successful</string>
    <string name="you_travels">Your travels</string>
    <string name="add_new_travel">Plan \na new trip</string>
    <string name="new_travel">New journey</string>
    <string name="choose_skin">Choose skin</string>
    <string name="choose_skin_b">Cover selection</string>
    <string name="choose_skin_galereia">Choose from gallery</string>
    <string name="where_travel">Where do you want to go?</string>
    <string name="when_travel">When do you want to go?</string>
    <string name="who_travel">Who will go?</string>
    <string name="save">Save</string>
    <string name="error_write">Write error, please try again later</string>
    <string name="adults">Adults</string>
    <string name="adults_sub">Age from 16 years</string>
    <string name="adults_one">adult</string>
    <string name="adults_many">adults</string>
    <string name="children">Children</string>
    <string name="children_sub">Age 2-16</string>
    <string name="children_one">child</string>
    <string name="children_many">children</string>
    <string name="babies">Babies</string>
    <string name="babies_sub">Age up to 2 years</string>
    <string name="babies_one">baby</string>
    <string name="babies_many">babies</string>
    <string name="summ_expense">Amount of expenses</string>
    <string name="summ_one_expense">Expense amount</string>
    <string name="history_expense">Expense history</string>
    <string name="add_expense">Add expense</string>
    <string name="add_first_expense">Add your first expense column</string>
    <string name="curenxy_settings">Go to currency settings</string>
    <string name="comment">Comment</string>
    <string name="date">Date</string>
    <string name="add_location">Add a label on the map</string>
    <string name="add_foto">Add a photo</string>
    <string name="main_currency">Main currency</string>
    <string name="additional_currency">Additional currency</string>
    <string name="additional_currency_hint">Select the currencies in which you plan to record expenses plus to the main one</string>
    <string name="rastes_currency_hint">We cannot say for sure at what rate you exchange currency. Please enter the course manually.</string>
    <string name="currency_expence">Cost currency</string>
    <string name="choose_anoter_cur">Choose another currency</string>
    <string name="currency_search_hint">Enter currency name</string>
    <string name="offline_title">No internet connection</string>
    <string name="offline_text">In offline mode, you can add new expenses. Full cost data and schedule will be available when a stable internet connection is available.</string>


    <string name="def_curensy">EUR</string>
    <string name="share">Share this</string>
    <string name="share_expence">Share expenses</string>
    <string name="travel_dates">Travel dates</string>
    <string name="total">Total spent:</string>


    //categories
    <string name="transport">Transport</string>
    <string name="booking">Rental of property</string>
    <string name="cafe_and_restorans">Cafes and restaurants</string>
    <string name="supermarket">Supermarket</string>
    <string name="tour">Excursions</string>
    <string name="entertainment">Entertainment</string>
    <string name="gifts">Gifts</string>
    <string name="shopping">Shopping</string>
    <string name="safety">Insurance</string>
    <string name="visa">Visa</string>
    <string name="others">Other expenses</string>

    //currency
    <string name="rub">Russian ruble</string>
    <string name="usd">U.S. dollar</string>
    <string name="eur">Euro</string>
    <string name="tryy">Turkish lira</string>
    <string name="cny">Chinese yuan</string>
    <string name="thb">Thai baht</string>
    <string name="krw">South Korean won</string>
    <string name="jpy">Japanese yen</string>
    <string name="inr">Indian rupee</string>
</resources>
